<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_main"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_main"/>
    <item
        android:id="@+id/menu_explore"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_explore"/>
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_list"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_refresh"/>

</menu>